--- a/ewqe-master/ewqe-master/style.css
+++ b/ewqe-master/ewqe-master/style.css
@@ -1,4 +1,5 @@
 body {
+    min-width: 320px;
     font-family: Arial, sans-serif;
     color: rgba(0, 0, 0, 0.749);
     background-color: #2b0347;
@@ -8,6 +9,7 @@ body {
     background-position: center center;
     background-attachment: fixed;
     height: 100vp;
+    overflow-x: hidden; 
 }
 
 .header {
@@ -77,6 +79,13 @@ h2 {
     width: 70%;
     height: auto;
     margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 90%;
+    font-size: x-large;
+    overflow: scroll;
+    text-align: justify;
+    overflow: auto; 
 }
 #footer{
     font-size: 15px;
@@ -87,7 +96,6 @@ h2 {
     background-color: #0000009a;
     border-radius: 10px;
     height: 40px;
-
     padding-top: 20px;
     padding-bottom: 20px;
 
@@ -104,9 +112,12 @@ p{
     border-radius: 10px;
   }
 #content_right {
+    margin-left: 15%;
+    margin-right: 20px;
     width: 100%;
     height: 70vh;
     border-radius: 10px;
+
   }
 
 
@@ -133,6 +144,7 @@ p{
     font-size: auto;
     border-color: #000000;
     border: 5px;
+    font-size: medium;
   }
 
 
@@ -159,6 +171,8 @@ p{
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
+    border-radius: 10px;
+
   }
 
   #message{
@@ -167,6 +181,8 @@ p{
     height: 150px;
     padding: 8px;
     margin-bottom: 15px;
+    border-radius: 10px;
+
   }
   
   #contact button[type="submit"] {
@@ -176,4 +192,31 @@ p{
     border: none;
     cursor: pointer;
     margin-bottom: 50px;
+    border-radius: 10px;
+
   }
+
+
+  ::-webkit-scrollbar {
+    width: 5px; 
+    border-radius: 10px; 
+    overflow-x: hidden; 
+}
+
+::-webkit-scrollbar-track {
+    background-color: #888888af;
+    border-radius: 10px; 
+    overflow-x: hidden; 
+  }
+
+::-webkit-scrollbar-thumb {
+    background-color: #9d0984b2;
+    border-radius: 10px; 
+    overflow-x: hidden; 
+  }
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #ae0c8e; 
+    border-radius: 10px; 
+    overflow-x: hidden; 
+}
